<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shop"
        android:title="@string/shop"
        android:icon="@drawable/shop_new"
        />
    <item
        android:id="@+id/teams"
        android:title="@string/teams"
        android:icon="@drawable/dash_new"
        />

    <item
        android:id="@+id/dash_home"
        android:title="Home"
        android:actionLayout="@layout/custom_menu_item"
       />

    <item
        android:id="@+id/finance"
        android:title="@string/finance"
        android:icon="@drawable/finance_new"
       />
    <item
        android:id="@+id/menu1"
        android:title="@string/menu"
        android:icon="@drawable/menu_new"
        />

</menu>