<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_back">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="150dp"
            android:background="@drawable/ppicon"
           android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/defaultname"
            android:textSize="16sp"
            android:fontFamily="@font/mont"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            style="@style/TextAppearance.Material3.BodyLarge"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/refer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refer_code"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/mont"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="18sp"
            android:textColor="@color/white"
            android:background="@drawable/textbased"
            />
        <ImageView
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="4sp"
            android:background="@drawable/baseline_content_copy_2"
            />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:fontFamily="@font/mont"/>

        <ProgressBar
            android:id="@+id/pro_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="235dp"
            android:layout_height="15sp"
            android:layout_margin="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            android:fontFamily="@font/mont"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/incomeValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_00"
        android:fontFamily="@font/mont"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_120sdp"
        android:elevation="15sp"
        android:layout_gravity="center"
        app:cardCornerRadius="3sp"
        android:layout_marginTop="15sp"
        android:layout_margin="20sp"
        app:cardBackgroundColor="#0897BB"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:outlineProvider="none"
            app:cardBackgroundColor="#0897BB"

            >

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/profile_1black"

                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="15sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Deposit"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/inter"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:paddingStart="35dp"/>

            <TextView
                android:id="@+id/depo_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:paddingStart="35dp"
                android:text="@string/_500"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_funds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/invest_1"
                android:text="@string/add_funds"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_120sdp"
        android:elevation="15sp"
        app:cardCornerRadius="3sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        app:cardBackgroundColor="#0897BB"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:outlineProvider="none"
            app:cardBackgroundColor="#0897BB"

            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/profile_2black"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="15sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/withdrawal"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/inter"
                android:paddingStart="35dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/with_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_500"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:paddingLeft="35dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/invest_funds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_1"
                android:text="@string/invest"
                android:fontFamily="@font/inter"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
